Added Cartalst\Sentry, Creolab\Lavarel-Modules, Way\Generators and the diag controller.

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.1.*"
+		"laravel/framework": "4.1.*",
+		"way/generators": "dev-master",
+		"creolab/laravel-modules": "dev-master",
+		"cartalyst/sentry": "2.0.*"
 	},
 	"autoload": {
 		"classmap": [
@@ -13,7 +16,8 @@
 			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
-			"app/tests/TestCase.php"
+			"app/tests/TestCase.php",
+			"app/modules"
 		]
 	},
 	"scripts": {
