--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"way/generators": "dev-master",
 		"creolab/laravel-modules": "dev-master",
 		"cartalyst/sentry": "2.0.*",
-        "laravelbook/ardent": "dev-master"
+        "laravelbook/ardent": "dev-master",
+        "thujohn/rss": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
