Added Contentify\Carbon class (to extend Carbon)

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 			"app/tests/TestCase.php",
 			"app/modules",
 			"app/classes",
-			"app/classes/facades"
+			"app/classes/facades",
+			"app/traits"
 		]
 	},
 	"scripts": {
