--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,7 @@
 			"app/database/seeds",
 			"app/tests/TestCase.php",
 			"app/modules",
-			"app/core",
-			"app/core/traits",
-			"app/core/controllers",
-			"app/core/models"
+			"app/core"
 		]
 	},
 	"scripts": {
