Final changes regarding the update to Laravel 4.2

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 /vendor
 composer.phar
 composer.lock
+.env.*.php
+.env.php
 .DS_Store
-.dev/
-.idea/
 Thumbs.db
 console.lnk
 /app/config/mail.php
+.dev/
+.idea/
