Moved and renamed the app/core folder

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 			"app/database/seeds",
 			"app/tests/TestCase.php",
 			"app/modules",
-			"app/core"
+			"contentify"
 		]
 	},
 	"scripts": {
