--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,11 @@
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php",
-			"app/modules",
-			"contentify"
-		]
+			"app/modules"
+		],
+        "psr-4": {
+            "Contentify\\": "Contentify"
+        }
 	},
 	"scripts": {
 		"post-install-cmd": [
