ALPHA  ONE RELEASE --- (Bugfixes, cleaning up..)

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 			"app/modules"
 		],
         "psr-4": {
-            "Contentify\\": "Contentify"
+            "Contentify\\": "contentify"
         }
 	},
 	"scripts": {
