Added missing folder, changed HTML facade alias (-> https://github.com/laravel/docs/pull/1523 ), etc.

--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         ],
         "psr-4": {
             "App\\": "app/",
-            "Contentify\\": "contentify",
-            "ChrisKonnertz\\Jobs\\": "Jobs"
+            "Contentify\\": "contentify"
         },
         "files": [
             "app/helpers.php"
