--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "laravel/framework": "5.0.*",
-        "laravelcollective/html": "~5.0",
+        "laravel/framework": "5.1.*",
+        "laravelcollective/html": "5.1.*",
         "cartalyst/sentry": "dev-feature/laravel-5@dev",
         "thujohn/rss": "~1.0",
         "intervention/image": "dev-master",
@@ -14,9 +14,11 @@
         "chriskonnertz/bbcode": "dev-master",
         "chriskonnertz/jobs": "dev-master",
         "watson/validating": "~1.0",
-        "caffeinated/modules": "~1.0"
+        "caffeinated/modules": "~2.0"
     },
     "require-dev": {
+        "fzaninotto/faker": "~1.4",
+        "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1"
     },
@@ -42,12 +44,16 @@
             "php artisan clear-compiled",
             "php artisan optimize"
         ],
+        "pre-update-cmd": [
+            "php artisan clear-compiled"
+        ],
         "post-update-cmd": [
-            "php artisan clear-compiled",
             "php artisan optimize"
         ],
+        "post-root-package-install": [
+            "php -r \"copy('.env.example', '.env');\""
+        ],
         "post-create-project-cmd": [
-            "php -r \"copy('.env.example', '.env');\"",
             "php artisan key:generate"
         ]
     },
