--- a/storage/app/database.ini
+++ b/storage/app/database.ini
@@ -2,6 +2,6 @@
 ; See config/database.php for more settings.
 
 host = localhost
-database = contentify_test
+database = contentify
 username = root
 password = 
