--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "chriskonnertz/bbcode": "dev-master",
         "chriskonnertz/jobs": "dev-master",
         "watson/validating": "~1.0",
-        "caffeinated/modules": "~2.0"
+        "caffeinated/modules": "~2.0",
+        "invisnik/laravel-steam-auth": "2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
