--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "laravel/framework": "5.1.*",
         "laravelcollective/html": "5.1.*",
         "cartalyst/sentry": "dev-feature/laravel-5@dev",
+        "cartalyst/sentinel": "2.0.*",
         "thujohn/rss": "~1.0",
         "intervention/image": "dev-master",
         "chriskonnertz/open-graph": "dev-master",
