Changed database default name (well at least for dev)

--- a/storage/app/database.ini
+++ b/storage/app/database.ini
@@ -2,6 +2,6 @@
 ; See config/database.php for more settings.
 
 host = localhost
-database = contentify
+database = contentify2
 username = root
 password = 
