--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,15 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "laravel/framework": "5.1.*",
-        "laravelcollective/html": "5.1.*",
+        "laravel/framework": "5.2.*",
+        "laravelcollective/html": "5.2.*",
         "cartalyst/sentinel": "2.0.*",
         "thujohn/rss": "~1.0",
         "intervention/image": "dev-master",
         "chriskonnertz/open-graph": "dev-master",
         "chriskonnertz/bbcode": "dev-master",
         "chriskonnertz/jobs": "dev-master",
-        "watson/validating": "~1.0",
+        "watson/validating": "~2.0",
         "caffeinated/modules": "~2.0",
         "invisnik/laravel-steam-auth": "2.*"
     },
@@ -21,7 +21,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "symfony/dom-crawler": "~3.0",
+        "symfony/css-selector": "~3.0"
     },
     "autoload": {
         "classmap": [
@@ -41,21 +42,19 @@
         ]
     },
     "scripts": {
-        "post-install-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize"
-        ],
-        "pre-update-cmd": [
-            "php artisan clear-compiled"
-        ],
-        "post-update-cmd": [
-            "php artisan optimize"
-        ],
         "post-root-package-install": [
             "php -r \"copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
             "php artisan key:generate"
+        ],
+        "post-install-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "php artisan optimize"
+        ],
+        "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "php artisan optimize"
         ]
     },
     "config": {
