Updated the Laravel framework to version 5.4

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-/vendor
 /node_modules
-.idea/
-*.env
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vagrant
+Homestead.json
+Homestead.yaml
+.env
 *.iml
-console.lnk
