--- a/storage/app/database.ini
+++ b/storage/app/database.ini
@@ -2,6 +2,6 @@
 ; See config/database.php for more settings.
 
 host = 127.0.0.1
-database = contentify2
+database = contentify2b
 username = root
 password = 
