--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "Contentify/Contentify",
-    "description": "Contentify is an eSports CMS based on the popular Laravel 5 framework.",
+    "description": "Contentify is an esports CMS based on the popular Laravel 5 framework.",
     "keywords": ["cms", "contentify"],
     "license": "MIT",
     "type": "project",
