--- a/composer.json
+++ b/composer.json
@@ -6,28 +6,30 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
+        "php": ">=7.0.0",
+        "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "5.4.*",
+        "laravelcollective/html": "5.5.*",
         "cartalyst/sentinel": "2.*",
         "thujohn/rss": "1.*",
-        "intervention/image": "dev-master",
-        "chriskonnertz/open-graph": "dev-master",
-        "chriskonnertz/bbcode": "dev-master",
+        "intervention/image": "2.*",
+        "chriskonnertz/open-graph": "1.*",
+        "chriskonnertz/bbcode": "1.*",
         "chriskonnertz/jobs": "3.*",
         "watson/validating": "3.*",
         "caffeinated/modules": "4.*",
         "invisnik/laravel-steam-auth": "3.*",
         "oyejorge/less.php": "1.*",
+        "fideloper/proxy": "~3.3",
         "ext-json": "*",
         "ext-ctype": "*",
         "ext-curl": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "mockery/mockery": "~1.0",
+        "phpunit/phpunit": "~6.0",
+        "filp/whoops": "~2.0"
     },
     "autoload": {
         "classmap": [
@@ -46,20 +48,22 @@
             "Tests\\": "tests/"
         }
     },
+    "extra": {
+        "laravel": {
+            "dont-discover": [
+            ]
+        }
+    },
     "scripts": {
         "post-root-package-install": [
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "php artisan key:generate"
+            "@php artisan key:generate"
         ],
-        "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
-        ],
-        "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
