--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
+SESSION_LIFETIME=2880
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
@@ -31,3 +32,4 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=mt1
