--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "Contentify",
-  "description": "Contentify Esports CMS",
-  "author": "Contentify.org",
-  "main": "Gruntfile.js",
-  "private": true,
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "jit-grunt": "^0.9.1"
-  }
+    "name": "contentify",
+    "description": "Contentify Esports CMS",
+    "author": "Contentify.org",
+    "main": "Gruntfile.js",
+    "private": true,
+    "devDependencies": {
+        "grunt": "^0.4.5",
+        "grunt-contrib-less": "^1.0.1",
+        "grunt-contrib-watch": "^0.6.1",
+        "jit-grunt": "^0.9.1"
+    }
 }
