Added a lot of type hints

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "ext-json": "*",
         "ext-ctype": "*",
         "ext-curl": "*",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "ext-gd": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
