--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 dist: xenial
 language: php
 php:
-  - '7.1'
-  - '7.2'
+  - '7.0'
   - '7.3'
   
 install:
@@ -13,4 +12,4 @@ before_script:
   - if find . -name "*.php" ! -path "./vendor/*" -print0 | xargs -0 -n 1 -P 8 php -l | grep -v "No syntax errors detected"; then exit 1; fi
 
 script:
-  - ./vendor/squizlabs/php_codesniffer/bin/phpcs --ignore=/vendor/*,_ide_helper.php --standard=PSR2 --exclude=PSR2.Files.EndFileNewline,Squiz.Functions.MultiLineFunctionDeclaration,Squiz.WhiteSpace.SuperfluousWhitespace,Squiz.Functions.FunctionDeclaration,PSR2.Methods.FunctionClosingBrace -n --encoding=utf-8 --extensions=php ./*
+#  - ./vendor/squizlabs/php_codesniffer/bin/phpcs --ignore=/vendor/*,_ide_helper.php --standard=PSR2 --exclude=PSR2.Files.EndFileNewline,Squiz.Functions.MultiLineFunctionDeclaration,Squiz.WhiteSpace.SuperfluousWhitespace,Squiz.Functions.FunctionDeclaration,PSR2.Methods.FunctionClosingBrace -n --encoding=utf-8 --extensions=php ./*
