--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,15 @@
 * text=auto
-*.css linguist-vendored
-*.less linguist-vendored
-*.js linguist-vendored
-CHANGELOG.md export-ignore
+/.github export-ignore
 dev/** export-ignore
+.editorconfig export-ignore
+.gitattributes export-ignore
+.gitignore export-ignore
+.travis.yml export-ignore
+CHANGELOG.md export-ignore
+CODE_OF_CONDUCT.md export-ignore
+CODEOWNERS export-ignore
+CONTRIBUTING.md export-ignore
+ISSUE_TEMPLATE.md export-ignore
+PULL_REQUEST_TEMPLATE.md export-ignore
+SECURITY.md export-ignore
+phpunit.xml.dist export-ignore
