--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,16 @@ root = true
 
 # Settings for all files
 [*]
+charset = utf-8
 end_of_line = lf
+insert_final_newline = true
 indent_style = space
 indent_size = 4
-insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.md]
+trim_trailing_whitespace = false
+
+[*.yml]
+indent_style = space
+indent_size = 2
