--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "Contentify/Contentify",
+    "name": "contentify/contentify",
     "description": "Contentify is an esports CMS based on the Laravel 5 framework.",
     "keywords": ["cms", "contentify", "gaming", "esports", "website"],
     "homepage": "http://www.contentify.org",
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
-        "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0",
+        "php": ">=7.1.3",
+        "laravel/framework": "5.7.*",
+        "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.5.*",
         "cartalyst/sentinel": "2.*",
         "thujohn/rss": "1.*",
@@ -20,7 +20,7 @@
         "caffeinated/modules": "4.*",
         "invisnik/laravel-steam-auth": "3.*",
         "oyejorge/less.php": "1.*",
-        "fideloper/proxy": "~3.3",
+        "fideloper/proxy": "^4.0",
         "ext-json": "*",
         "ext-ctype": "*",
         "ext-curl": "*",
@@ -28,10 +28,10 @@
         "ext-gd": "*"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~6.0",
-        "filp/whoops": "~2.0",
+        "fzaninotto/faker": "^1.4",
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^7.0",
+        "filp/whoops": "^2.0",
         "squizlabs/php_codesniffer": "*"
     },
     "config": {
