Update to Laravel 5.8

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,11 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=2880
 QUEUE_CONNECTION=sync
 
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
