--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.5.*",
         "cartalyst/sentinel": "2.*",
@@ -31,7 +31,8 @@
         "beyondcode/laravel-dump-server": "^1.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^7.0",
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^7.5",
         "filp/whoops": "^2.0",
         "squizlabs/php_codesniffer": "*"
     },
