--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME=Contentify
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
