--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.1.3",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
+        "php": "^7.2.5|^8.0",
+        "laravel/framework": "^6.0",
+        "laravel/tinker": "^2.5",
         "laravelcollective/html": "5.5.*",
         "cartalyst/sentinel": "2.*",
         "thujohn/rss": "1.*",
@@ -20,7 +20,7 @@
         "caffeinated/modules": "4.*",
         "invisnik/laravel-steam-auth": "3.*",
         "oyejorge/less.php": "1.*",
-        "fideloper/proxy": "^4.0",
+        "fideloper/proxy": "^4.4",
         "ext-json": "*",
         "ext-ctype": "*",
         "ext-curl": "*",
@@ -28,12 +28,11 @@
         "ext-gd": "*"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "fzaninotto/faker": "^1.4",
+        "facade/ignition": "^1.16.15",
+        "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5",
-        "filp/whoops": "^2.0",
+        "phpunit/phpunit": "^8.5.8|^9.3.3"
         "squizlabs/php_codesniffer": "*"
     },
     "config": {
