--- a/composer.json
+++ b/composer.json
@@ -9,30 +9,30 @@
         "php": "^7.2.5|^8.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^2.5",
-        "laravelcollective/html": "5.5.*",
-        "cartalyst/sentinel": "2.*",
-        "thujohn/rss": "1.*",
+        "laravelcollective/html": "^6.0",
+        "cartalyst/sentinel": "3.*",
         "intervention/image": "2.*",
         "chriskonnertz/open-graph": "1.*",
         "chriskonnertz/bbcode": "1.*",
         "chriskonnertz/jobs": "3.*",
         "watson/validating": "3.*",
-        "caffeinated/modules": "4.*",
-        "invisnik/laravel-steam-auth": "3.*",
+        "caffeinated/modules": "6.*",
+        "invisnik/laravel-steam-auth": "4.*",
         "oyejorge/less.php": "1.*",
         "fideloper/proxy": "^4.4",
         "ext-json": "*",
         "ext-ctype": "*",
         "ext-curl": "*",
         "ext-pdo": "*",
-        "ext-gd": "*"
+        "ext-gd": "*",
+        "ext-simplexml": "*"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.5.8|^9.3.3"
+        "phpunit/phpunit": "^8.5.8|^9.3.3",
         "squizlabs/php_codesniffer": "*"
     },
     "config": {
